# blabla-inator

./: Cargo.toml  Makefile  README.md  docker-compose.yml
src/: chat_message.rs  cli_config.rs  error.rs  kafka.rs  lib.rs  main.rs
