[package]
name = "blabla-inator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
gethostname = "0.4.3"
rdkafka = "0.36.2"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
